added a consumer with ackmode=manual

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,4 +14,6 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       group-id: library-events-listener-group
+    listener:
+      ack-mode: MANUAL
 
