--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     active: local
 
 server:
-  port: 8081
+  port: 8082
 
 ---
 spring:
@@ -17,4 +17,13 @@ spring:
     listener:
       ack-mode: MANUAL
       concurrency: 2
-
+  datasource:
+    url: jdbc:h2:mem:test
+    driver-class-name: org.h2.Driver
+  jpa:
+    database: h2
+    database-platform: org.hibernate.dialect.H2Dialect
+    generate-ddl: true
+  h2:
+    console:
+      enabled: true
