--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,12 @@ spring:
     listener:
       ack-mode: MANUAL
       concurrency: 2
+    producer:
+      bootstrap-servers: localhost:9092
+      key-deserializer: org.apache.kafka.common.serialization.IntegerSerializer
+      value-deserializer: org.apache.kafka.common.serialization.StringSerializer
+    template:
+      default-topic: library-events
   datasource:
     url: jdbc:h2:mem:test
     driver-class-name: org.h2.Driver
